# sentinelmcp

./: .gitignore  .pre-commit-hooks.yaml  BUILD_SIGNING.md  CHANGELOG.md  LAUNCH.md  LICENSE  PRICING.md  README.md  SENTINEL_TASKS.md  sentinel-mcp-agents-orchestration.md  sentinel-mcp-pipeline-spec.md  sentinel-mcp-spec-complete.md
sentinel/: Cargo.toml  FEATURES.md  L20_LOOKALIKE_REPORT.md  V20_REPORT.md
sentinel/crates/sentinel-alerts/: Cargo.toml
sentinel/crates/sentinel-alerts/src/: dedup.rs  engine.rs  enrichment.rs  lib.rs  lifecycle.rs  metrics.rs  secrets.rs  severity.rs  siem.rs
sentinel/crates/sentinel-alerts/tests/: dashboard_channel.rs  dedup.rs  e2e_pipeline.rs  email_channel.rs  engine_loop.rs  enrichment.rs  latency_report.rs  lifecycle.rs  severity.rs  siem.rs  sink_elastic.rs  sink_splunk.rs  sink_syslog.rs  sink_syslog_tcp.rs  sink_syslog_tls.rs  webhook_channel.rs
sentinel/crates/sentinel-cli/: Cargo.toml
sentinel/crates/sentinel-cli/examples/: e2e.rs
sentinel/crates/sentinel-cli/src/: cmd_audit.rs  cmd_benchmark.rs  cmd_metrics.rs  cmd_monitor.rs  cmd_report.rs  cmd_scan.rs  db.rs  main.rs  sortie.rs
sentinel/crates/sentinel-cli/tests/: cli.rs
sentinel/crates/sentinel-detect/: Cargo.toml
sentinel/crates/sentinel-detect/examples/: check_registries.rs
sentinel/crates/sentinel-detect/src/: canonical.rs  corpus.rs  cve_match.rs  diff.rs  exfiltration.rs  fingerprint.rs  lib.rs  llm_judge.rs  rugpull.rs  sampling.rs  shadowing.rs  yara.rs
sentinel/crates/sentinel-detect/tests/: canonical.rs  corpus_validation.rs  diff.rs  exfiltration.rs  fingerprint.rs  intra_inventory.rs  llm_judge.rs  lookalike_enum_e2e.rs  lookalikes_lead.rs  lookalikes_mcp_registry.rs  lookalikes_pulsemcp.rs  lookalikes_similarity.rs  lookalikes_smithery_mcpso.rs  poisoning_hybride.rs  poisoning_lead.rs  poisoning_patterns.rs  poisoning_resources_prompts.rs  rugpull.rs  sampling.rs  trifecta.rs  yara_rules.rs
sentinel/crates/sentinel-discovery/: Cargo.toml
sentinel/crates/sentinel-discovery/data/: threat_feed.yaml
sentinel/crates/sentinel-discovery/examples/: probe.rs  probe_orizn.rs  smoke_e2e.rs
sentinel/crates/sentinel-discovery/src/: active_probe.rs  active_probe_http.rs  config_baseline.rs  lib.rs  model.rs  orchestrator.rs  runtime_inspector.rs  skills.rs  static_http.rs  supply_chain.rs  threat_intel.rs  trust_graph.rs
sentinel/crates/sentinel-discovery/tests/: active_probe.rs  active_probe_http.rs  aider.rs  antigravity.rs  chemins_par_os.rs  claude_code_cli.rs  claude_desktop.rs  codex.rs  continuedev.rs  cursor.rs  goose.rs  lmstudio.rs  scope_projet.rs  skills.rs  supply_chain.rs  threat_feed_refresh.rs  threat_intel.rs  trust_graph.rs  vscode.rs  windsurf.rs  zed.rs
sentinel/crates/sentinel-guard/: Cargo.toml
sentinel/crates/sentinel-guard/src/: db.rs  garde.rs  injection.rs  lib.rs  main.rs
sentinel/crates/sentinel-guard/tests/: garde_e2e.rs
sentinel/crates/sentinel-monitor/: Cargo.toml
sentinel/crates/sentinel-monitor/src/: activity_log.rs  baselines.rs  contracts.rs  derive_lente.rs  engine.rs  golden.rs  inter_session.rs  intra_session.rs  lib.rs  new_servers.rs  perf.rs  policy.rs  privacy.rs
sentinel/crates/sentinel-monitor/tests/: activity_log.rs  baselines.rs  contracts.rs  derive_lente.rs  engine_loop.rs  golden_baselines.rs  inter_session.rs  intra_session.rs  new_servers.rs  perf.rs  policy.rs  privacy.rs
sentinel/crates/sentinel-protocol/: Cargo.toml
sentinel/crates/sentinel-protocol/src/: lib.rs
sentinel/crates/sentinel-report/: Cargo.toml
sentinel/crates/sentinel-report/examples/: preview_pdf.rs
sentinel/crates/sentinel-report/src/: approval.rs  compliance.rs  dashboard.rs  engine.rs  inventory.rs  json_export.rs  lib.rs  pdf.rs  remediation.rs  signature.rs  summary.rs
sentinel/crates/sentinel-report/tests/: approval.rs  compliance.rs  dashboard.rs  engine_pipeline.rs  integration_finale.rs  inventory_changelog.rs  json_export.rs  pdf_render.rs  remediation.rs  signature.rs  summary.rs
sentinel/crates/sentinel-scan/: Cargo.toml
sentinel/crates/sentinel-scan/benches/: coarse_throughput.rs
sentinel/crates/sentinel-scan/examples/: scan_demo.rs  scan_real_mcp.rs  stdio_wrapper_demo.rs
sentinel/crates/sentinel-scan/src/: demo.rs  event.rs  lib.rs  precision.rs  proxy.rs  scope.rs  store_contract.rs  tools_list.rs
sentinel/crates/sentinel-scan/tests/: coarse_filter.rs  demo_integration.rs  event_normalisation.rs  http_capture.rs  precision_benchmark.rs  proxy.rs  proxy_temps_reel.rs  real_mcp_server.rs  scope_detector.rs  signature_confirmation.rs  stdio_capture.rs  store_contract.rs  tools_list_parser.rs
sentinel/crates/sentinel-stix/: Cargo.toml
sentinel/crates/sentinel-stix/src/: bundle.rs  ids.rs  lib.rs  mapping.rs  types.rs  validate.rs
sentinel/crates/sentinel-stix/tests/: conformance.rs  integration.rs  schema_validation.rs
sentinel/crates/sentinel-store/: Cargo.toml
sentinel/crates/sentinel-store/src/: lib.rs  registry_cache.rs
sentinel/crates/sentinel-store/tests/: baseline_history.rs  identite_canonique.rs  registry_cache.rs  scope.rs  tags.rs
sentinel/crates/sentinel-taxii/: Cargo.toml
sentinel/crates/sentinel-taxii/src/: lib.rs
sentinel/crates/sentinel-taxii/tests/: client.rs  outbound_gate.rs  taxii21.rs
sentinel/sentinel-desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
sentinel/sentinel-desktop/docs/: SCREENSHOTS.md
sentinel/sentinel-desktop/scripts/: README.md  build-icons.sh  build-mac.sh  build_icons.py  e2e-smoke.sh
sentinel/sentinel-desktop/src/: App.tsx  styles.css
sentinel/sentinel-desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
sentinel/sentinel-desktop/src-tauri/capabilities/: default.json
sentinel/sentinel-desktop/src-tauri/src/: background.rs  commands.rs  commands_discovery.rs  commands_enforcement.rs  commands_lookalikes.rs  commands_proxy.rs  commands_runtime.rs  commands_settings.rs  commands_siem.rs  commands_stix.rs  commands_tags.rs  commands_taxii.rs  commands_threat_feed.rs  (+4 more)
(+208 files in other folders)
