[workspace]
resolver = "2"
members = [
    "crates/sentinel-protocol",
    "crates/sentinel-store",
    "crates/sentinel-scan",
    "crates/sentinel-monitor",
    "crates/sentinel-detect",
    "crates/sentinel-alerts",
    "crates/sentinel-report",
    "crates/sentinel-discovery",
    "crates/sentinel-cli",
    "crates/sentinel-taxii",
    "crates/sentinel-stix",
    "crates/sentinel-guard",
]
exclude = ["sentinel-desktop"]

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Sentinel MCP Team"]
repository = "https://github.com/MattJeff/sentinelmcp"
homepage = "https://github.com/MattJeff/sentinelmcp"

[workspace.dependencies]
sentinel-protocol = { path = "crates/sentinel-protocol", version = "0.8.0" }
sentinel-store = { path = "crates/sentinel-store", version = "0.8.0" }
sentinel-scan = { path = "crates/sentinel-scan", version = "0.8.0" }
sentinel-monitor = { path = "crates/sentinel-monitor", version = "0.8.0" }
sentinel-detect = { path = "crates/sentinel-detect", version = "0.8.0" }
sentinel-alerts = { path = "crates/sentinel-alerts", version = "0.8.0" }
sentinel-report = { path = "crates/sentinel-report", version = "0.8.0" }
sentinel-discovery = { path = "crates/sentinel-discovery", version = "0.8.0" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
regex = "1"
once_cell = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
similar = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls-tls"] }
hyper = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
clap = { version = "4", features = ["derive"] }
strsim = "0.11"
printpdf = "0.7"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
