[package]
name = "sentinel-alerts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinel-protocol = { workspace = true }
sentinel-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rustls-platform-verifier = "0.5"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
wiremock = "0.6"
rcgen = "0.13"
