[package]
name = "sentinel-detect"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sentinel-protocol = { workspace = true }
sentinel-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
similar = { workspace = true }
strsim = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
