[package]
name = "sentinel-detect"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel MCP — moteur de détection : empreinte canonique, rug-pull, tool poisoning, exfiltration, sosies, règles YARA"
repository.workspace = true
homepage.workspace = true
keywords = ["mcp", "security", "detection", "yara", "rugpull"]
categories = ["development-tools"]

[dependencies]
sentinel-protocol = { workspace = true }
sentinel-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
# Normalisation Unicode NFKC du chemin de DÉTECTION (homoglyphes / variantes de
# compatibilité repliées avant l'application des patterns regex). N'intervient
# jamais dans l'empreinte canonique (canonical.rs) — contrat d'empreinte stable.
unicode-normalization = "0.1"
similar = { workspace = true }
strsim = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
# Moteur YARA pur Rust (réimplémentation VirusTotal, aucune libyara C).
# Features minimales : pas de modules binaires (PE/ELF/Mach-O…) inutiles
# pour scanner du texte (descriptions + inputSchema d'outils MCP).
yara-x = { version = "1.17", default-features = false, features = ["constant-folding", "exact-atoms", "fast-regexp"] }

[dev-dependencies]
wiremock = "0.6"
base64 = "0.22"
tempfile = "3"
