[package]
name = "sentinel-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel MCP — découverte des clients IA compatibles MCP (Claude Desktop, Cursor, Windsurf, VS Code…) et de leurs serveurs déclarés"
repository.workspace = true
homepage.workspace = true
keywords = ["mcp", "security", "discovery", "ai", "inventory"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
sentinel-protocol = { workspace = true }
sentinel-store = { workspace = true }
sentinel-scan = { workspace = true }
sentinel-detect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dirs = "5"
walkdir = "2"
toml = "0.8"
serde_yaml = "0.9"
sysinfo = "0.39"
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
wiremock = "0.6"
filetime = "0.2"
