[package]
name = "sentinel-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel MCP — surveillance continue : baselines, journal d'activité, détection de dérive intra/inter-session et de nouveaux serveurs"
repository.workspace = true
homepage.workspace = true
keywords = ["mcp", "security", "monitoring", "drift", "baseline"]
categories = ["development-tools"]

[dependencies]
sentinel-protocol = { workspace = true }
sentinel-store = { workspace = true }
sentinel-report = { workspace = true }
# Réutilisé pour la canonicalisation JSON déterministe des empreintes (B7).
sentinel-detect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
