[package]
name = "sentinel-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel MCP — types et contrats partagés (sans logique métier) entre les modules de Sentinel"
repository.workspace = true
homepage.workspace = true
keywords = ["mcp", "security", "protocol", "ai", "types"]
categories = ["data-structures", "development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
