[package]
name = "sentinel-report"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel MCP — génération de rapports MCP09 signés (Ed25519), export PDF/JSON, tableau de bord et flux d'approbation"
repository.workspace = true
homepage.workspace = true
keywords = ["mcp", "security", "report", "pdf", "compliance"]
categories = ["development-tools"]

[dependencies]
sentinel-protocol = { workspace = true }
sentinel-store = { workspace = true }
sentinel-detect = { workspace = true }
sentinel-alerts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs = "6"
printpdf = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
sentinel-scan = { workspace = true }
