[package]
name = "sentinel-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel MCP — capture stdio/HTTP, normalisation, détection de signature MCP, parsing tools/list et inférence de portée"
repository.workspace = true
homepage.workspace = true
keywords = ["mcp", "security", "scanner", "audit", "stdio"]
categories = ["development-tools", "network-programming"]

[dependencies]
sentinel-protocol = { workspace = true }
sentinel-store = { workspace = true }
sentinel-detect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
