[package]
name = "sentinel-stix"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
sentinel-store = { path = "../sentinel-store" }
sentinel-protocol = { path = "../sentinel-protocol" }
sentinel-discovery = { workspace = true }

[dev-dependencies]
jsonschema = { version = "0.18", features = ["draft202012"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
