[package]
name = "sentinel-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel MCP — store local embarqué SQLite : inventaire, baselines, historique des contacts, constats et alertes"
repository.workspace = true
homepage.workspace = true
keywords = ["mcp", "security", "sqlite", "storage", "database"]
categories = ["database", "development-tools"]

[dependencies]
sentinel-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
refinery = { version = "0.9", default-features = false, features = ["rusqlite"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
