[package]
name = "sentinel-taxii"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt", "time"] }
thiserror = "1"
base64 = "0.22"
url = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
