[package]
name = "sentinel-taxii"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Sentinel MCP — client TAXII 2.1 pour publier des bundles STIX vers une collection (discovery, auth, retries, pagination)"
repository.workspace = true
homepage.workspace = true
keywords = ["taxii", "stix", "security", "threat-intel", "cti"]
categories = ["web-programming::http-client", "network-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt", "time"] }
thiserror = "1"
base64 = "0.22"
url = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
